# e-shop

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
apps/cart/: cart.py  forms.py  urls.py  views.py
apps/cart/templates/cart/: detail.html
apps/coupons/: admin.py  forms.py  models.py  urls.py  views.py
apps/coupons/migrations/: 0001_initial.py  0002_alter_coupon_active.py
apps/orders/: admin.py  models.py  tasks.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_rename_oreritem_orderitem.py  0003_order_stripe_id.py  0004_order_coupon_order_discount.py
apps/orders/templates/admin/orders/order/: detail.html  pdf.html
apps/orders/templates/orders/order/: create.html  created.html
apps/payment/: tasks.py  urls.py  views.py  webhooks.py
apps/payment/templates/payment/: canceled.html  completed.html  process.html
apps/shop/: admin.py  models.py  recommender.py  urls.py  views.py
apps/shop/migrations/: 0001_initial.py
apps/shop/templates/shop/: base.html
apps/shop/templates/shop/product/: detail.html  list.html
eshop/: celery.py  settings.py  urls.py
media/products/24/0925/: green_tea.jfif  red_tea.jfif  tea_powder.jfif
media/products/24/1024/: black_tea_image.jfif
