[tool.poetry]
name = "e-shop"
version = "0.1.0"
description = ""
authors = ["seela-2001 <sohilamustafa68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
celery = "^5.4.0"
flower = "^2.0.1"
stripe = "^10.12.0"
weasyprint = "^62.3"
cffi = "^1.17.1"
pydyf = "^0.11.0"
pango = "^0.0.1"
html5lib = "^1.1"
tinycss2 = "^1.3.0"
cssselect2 = "^0.7.0"
pyphen = "^0.16.0"
fonttools = "^4.54.1"
django-widget-tweaks = "^1.5.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
